# rubiks-bot

./: .gitignore  README.md  pyproject.toml
rubiks_bot/: __init__.py  scramble.py
rubiks_bot/algorithms/: algorithm.py  cube.py
rubiks_bot/geometry/: grid.py  group.py  sticker.py
rubiks_bot/puzzles/: rubiksCubeNet.py
rubiks_bot/simulator/: constants.py  rubiksCubeSimulator.py  simulator.py
rubiks_bot/visualizer/: __init__.py
