[tool.poetry]
name = "rubiks-bot"
version = "0.1.0"
description = ""
authors = ["Gengchen <tuogengchen@gmail.com>"]
readme = "README.md"
packages = [{include = "rubiks_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
magiccube = "^0.0.10"
nonebot2 = "^2.0.0rc1"
nonebot-adapter-onebot = "^2.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
